--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MyBlogContext": "data source=.;database=razorwebdb;integrated security=SSPI;Trusted_Connection=True;TrustServerCertificate = True"
+  },
+  "MailSettings": {
+    "Mail": "hoangphuong965@gmail.com",
+    "DisplayName": "NTHP",
+    "Password": "hoangphuong2351998",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
 }
