chua xong: tich hop google, facebook

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,10 +11,16 @@
     "MyBlogContext": "data source=.;database=razorwebdb;integrated security=SSPI;Trusted_Connection=True;TrustServerCertificate = True"
   },
   "MailSettings": {
-    "Mail": "hoangphuong965@gmail.com",
-    "DisplayName": "NTHP",
-    "Password": "hoangphuong2351998",
+    "Mail": "admin@gmail.com",
+    "DisplayName": "admin",
+    "Password": "",
     "Host": "smtp.gmail.com",
     "Port": 587
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "121364858472-vdoj0b9cqcfena3ds3tkianqrakg6p1i.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
   }
 }
